plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.13'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'neoguri'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework.boot:spring-boot-starter-security'  // for security (dongjin)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // for security (dongjin)
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // for security (dongjin)
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // for security (dongjin)

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // for oauth2 (dongjin)
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // for oauth2 (dongjin)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'  // for redis (dongjin)

	implementation group: 'com.google.code.gson', name: 'gson' // for ErrorResponder 등

	runtimeOnly 'com.h2database:h2' // for h2 in-memory database

	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0' // p6spy for  logging tracktion
}

tasks.named('test') {
	useJUnitPlatform()
}
